# h8-112-rmt

./: hello.py  pyproject.toml  requirements.txt
models/: model_digits_0.1.pkl  scaler_digits_0.1.pkl
notebooks/: session-01.ipynb  session-02.ipynb  session-03.ipynb  session-04.ipynb  session-05.ipynb  session-06.ipynb  session-07.ipynb  session-09.ipynb  session-10.ipynb  session-11-with-outline.ipynb  session-11.ipynb  session-12-with-knn.ipynb  session-12-with-outline.ipynb  session-12.ipynb  session-13.ipynb  session-14.ipynb
notebooks/pkg/: mod.py
